// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button isWaiting state matches snapshot 1`] = `
<button
  className="sc-bczRLJ kAqnNz"
  disabled={true}
>
  Submitting...
</button>
`;

exports[`Button matches light color snapshot 1`] = `
<button
  className="sc-bczRLJ gOYBaR"
>
  Click Me
</button>
`;

exports[`Button matches snapshot 1`] = `
<button
  className="sc-bczRLJ kAqnNz"
>
  Click Me
</button>
`;
